Avoid overlapping between button and assessment

--- a/client/src/routes/Landing/styles.scss
+++ b/client/src/routes/Landing/styles.scss
@@ -12,15 +12,16 @@
 
   &__assessment {
     position: absolute;
-    height: 100%;
-    width: 100%;
+    height: 120%;
+    width: 70%;
+    right: 0;
     background: url(./src/assets/icons/report-landing-page.svg) no-repeat right;
     animation: fadeIn ease 2s;
     -webkit-animation: fadeIn ease 2s;
     -moz-animation: fadeIn ease 2s;
     -o-animation: fadeIn ease 2s;
     -ms-animation: fadeIn ease 2s;
-    bottom: -208px;
+    bottom: -220px;
   }
 
   @keyframes fadeIn {
